[package]
name = "fs-events"
version = "0.1.0"
authors = ["Diego Rubin <contact@diegorubin.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.3"
serde = "1.0"
serde_yaml = "0.8.13"
serde_json = "~1"
rdkafka = { version = "0.23", features = ["cmake-build"] }
